feature: adding moooooreeee swager
